[refactor] split main implementation and platform API(Idea API)